# kirkstone

./: AUDIT_SUMMARY.md  MATTER_PROTOCOL_AUDIT_REPORT.md  OTBR_BRIDGE_FIX.md  OTBR_FIX_SUMMARY.md  PHASE1_PHASE2_IMPLEMENTATION.md  POC_AUDIT_AND_FIXES.md  POC_CHANGES_SUMMARY.md  POC_COMMISSIONING_AUDIT.md  POC_COMMISSIONING_GUIDE.md  POC_DEMO_GUIDE.md  POC_FINAL_SUMMARY.md  POC_FIXES_SUMMARY.md  POC_QUICK_TEST.md  POC_REFACTORING_COMPLIANCE.md  POC_TESTING_VALIDATION.md  README.md  cur_matter_diff.txt  status_file_copy_paste.sh
bluez/: BluezEndpoint.cpp  BluezEndpoint.h
bluez5/5.66-r0/: 0005-clear_old_cache_list.patch  CVE-2023-45866-5.66.patch  configure.sstate
bluez5/5.66-r0/bluez-5.66/: Makefile.am  Makefile.in  aclocal.m4  configure
bluez5/5.66-r0/deploy-source-date-epoch/: __source_date_epoch.txt
bluez5/5.66-r0/packages-split/: bluez5-mpris-proxy.shlibdeps  bluez5-noinst-tools.shlibdeps  bluez5.shlibdeps
bluez5/5.66-r0/pkgdata/: bluez5
bluez5/5.66-r0/pkgdata-sysroot/: attr  autoconf-archive  base-files  bzip2  cracklib  dbus  flex  gcc-runtime  gdbm  glib-2.0  libgcc  libpam  libxml2  openssl  python3  sqlite3  systemd  util-linux  util-linux-libuuid  vala  xz  zlib  zstd
bluez5/5.66-r0/pseudo/: files.db  logs.db
bluez5/5.66-r0/temp/: log.do_cleansstate.15837  log.do_compile  log.do_compile.24589  log.do_configure.15560  log.do_configure.18031  log.do_configure.21969  log.do_deploy_source_date_epoch.15095  log.do_fetch.12812  log.do_install.32551  log.do_install.35740  log.do_package  log.do_package.36218  log.do_package_qa  log.do_package_qa.38420  log.do_package_write_ipk  log.do_package_write_ipk.38419  log.do_packagedata.35311  log.do_patch  log.do_patch.16767  log.do_populate_lic  log.do_populate_sysroot  log.do_populate_sysroot.36212  log.do_prepare_recipe_sysroot  log.do_prepare_recipe_sysroot.16703  log.do_unpack.12818  log.do_unpack.16702  log.do_write_metadata_logrotate  log.task_order  run.autotools_postconfigure.15560  run.autotools_postconfigure.21969  run.autotools_preconfigure.15560  run.autotools_preconfigure.18031  run.autotools_preconfigure.21969  run.buildhistory_emit_pkghistory.35613  run.buildhistory_emit_pkghistory.38327  run.buildhistory_emit_sysroot.33021  run.buildhistory_list_pkg_files.33117  run.buildhistory_list_pkg_files.36218  run.do_compile  run.do_compile.24589  (+51 more)
components/opensource/OMI/: CMakeLists.txt  CONTRIBUTING.md  omiclientlib.pc.in
components/opensource/OMI/client/: i_omi_proxy.hpp  omi_proxy.cpp  omi_proxy.hpp
components/opensource/OMI/dbus/: com.lgi.onemw.omi1.xml
components/opensource/OMI/src/: omi_log.hpp  omi_main.cpp  omi_mount.cpp  omi_mount.hpp  omi_parser.cpp  omi_parser.hpp  omi_service.cpp  omi_service.hpp  omi_unmount.cpp  omi_unmount.hpp  omi_utils.cpp  omi_utils.hpp
components/opensource/OMI/test/: omi_parser_test.cpp
components/opensource/gdbus-client/: CONTRIBUTING.md
components/opensource/hal-voice-asterisk/: Makefile.in  aclocal.m4  configure  oe-logs  oe-workdir
meta-cmf/: CONTRIBUTING.md
meta-cmf-broadband/: CONTRIBUTING.md
meta-cmf-broadband/conf/: layer.conf
meta-cmf-broadband/conf/include/: rdk-bbmasks-broadband.inc
meta-cmf-broadband/recipes-ccsp/ccsp/: ccsp-common-library.bbappend  ccsp-home-security.bbappend  ccsp-one-wifi.bbappend  ccsp-p-and-m.bbappend  ccsp-psm.bbappend  ccsp-webui-bci-jst.bbappend  ccsp-webui-bci-php.bbappend  ccsp-webui-jst.bbappend  ccsp-webui-php.bbappend  ccsp-wifi-agent.bbappend  lanmanager.bbappend  modemmanager_1.20.3.bbappend  notify-comp.bbappend  platformmanager.bbappend  rdk-cellularmanager-mm.bb  rdk-cellularmanager-mm.bbappend  rdk-interdevicemanager.bbappend  rdk-ledmanager.bbappend  rdk-ppp-manager.bbappend  rdk-vlanmanager.bbappend  rdk-wanmanager.bbappend  rdkgponmanager.bbappend  rdkxdslmanager.bbappend
meta-cmf-broadband/recipes-ccsp/graphviz/: graphviz_%.bbappend
meta-cmf-broadband/recipes-ccsp/hal/: hal-voice-asterisk_git.bbappend  hal-wifi-cfg80211_git.bb  rdk-wifi-hal.bbappend  rdk-wifi-util.bbappend
meta-cmf-broadband/recipes-ccsp/rdk-wifi-libhostap/: rdk-wifi-libhostap.bbappend
meta-cmf-broadband/recipes-ccsp/util/: core-net-lib.bbappend  test-and-diagnostic.bbappend  utopia.bbappend
meta-cmf-broadband/recipes-common/crashupload/: crashupload_git.bbappend
meta-cmf-broadband/recipes-common/rdm/: rdm.bbappend
meta-cmf-broadband/recipes-connectivity/opensync/: opensync_git.bbappend
meta-cmf-broadband/recipes-core/packagegroups/: packagegroup-rdk-ccsp-broadband.bbappend
meta-cmf-broadband/recipes-core/util-linux/: util-linux_%.bbappend
meta-cmf-broadband/recipes-devtools/python/: python3-twisted_%.bbappend
meta-cmf-broadband/recipes-iot/zilker-sdk/: zilker-sdk_git.bb
meta-cmf-broadband/recipes-networking/openvswitch/: openvswitch_%.bbappend
meta-cmf-broadband/recipes-rdkb/sysint-broadband/: sysint-broadband-min.bbappend
meta-cmf-broadband/recipes-rdkb/tdkb/: tdk-b.bbappend
meta-cmf-broadband/recipes-support/dnsmasq/: dnsmasq_2.81.bbappend
meta-cmf-mesh/: CONTRIBUTING.md
meta-cmf-mesh/conf/: layer.conf
meta-cmf-mesh/recipes-common/mesh-agent/: mesh-agent.bb
meta-cmf-mesh/recipes-opensync/opensync/: opensync_git.bbappend
meta-cmf/classes/: generate_libs_json.bbclass
meta-cmf/conf/: layer.conf
meta-rdk/: CONTRIBUTING.md  rename_srcrev.sh  setup-environment
meta-rdk-broadband/conf/: layer.conf
meta-rdk-ext/: CONTRIBUTING.md
meta-rdk-ext/classes/: logrotate.bbclass
meta-rdk-ext/conf/: layer.conf
meta-rdk-opensync/conf/: layer.conf
meta-rdk/classes/: coverity.bbclass  image_container_generator.bbclass  license_create_manifest_pdf.bbclass
meta-rdk/conf/: bblayers.conf.sample
meta-rtlwifi/conf/: layer.conf
rdkb/components/opensource/ccsp/RdkLedManager/source/LedManager/: Makefile.am  led_manager.c  led_manager.h  led_manager_dbus_utils.c  led_manager_dbus_utils.h  led_manager_events.c  led_manager_events.h  led_manager_global.h  led_manager_utils.c  led_manager_utils.h  ledmgr_dml.h  ledmgr_webconfig.c  ledmgr_webconfig.h  platform_hal_sample.c
(+4378 files in other folders)
